ansible/roles/kubernetes-master/templates/einwohner-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: einwohner-deployment
  labels:
    app.kubernetes.io/name: einwohner-deployment
    app.kubernetes.io/version: 1.0.0
spec:
  template:
    metadata:
      name: einwohner
      labels:
        app.kubernetes.io/name: einwohner
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/component: backend
    spec:
      restartPolicy: Always
      volumes:
        - name: einwohner-config
          secret:
            secretName: einwohner-secret
            defaultMode: 0666
        - name: einwohner-server-logs
          persistentVolumeClaim:
            claimName: pvc-logs
        - name: host-properties
          hostPath:
            type: File
            path: /home/raman/programs/servers/host.properties
      containers:
        - name: einwohner
          image: ramansharma/einwohnertomcat:v1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1024M"
              cpu: "1"
            requests:
              memory: "500M"
              cpu: "0.5"
          volumeMounts:
            - name: host-properties
              mountPath: /usr/local/tomcat/conf/host/host.properties
              readOnly: true
            - name: einwohner-server-logs
              mountPath: /home/config-server/app-logs
              readOnly: false
              subPath: einwohner
            - name: einwohner-config
              mountPath: /usr/local/tomcat/app-conf/config-server.properties
              readOnly: true
              subPath: config-server.properties
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - /usr/local/tomcat/bin/check-if-healthy.sh
            initialDelaySeconds: 180
            timeoutSeconds: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /einwohner/rest/anwendungs-info
              port: 8443
            initialDelaySeconds: 180
            timeoutSeconds: 1
            failureThreshold: 5
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: einwohner
