ansible/roles/kubernetes-master/templates/mysql-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-db
subsets:
  - addresses:
      - ip: 192.168.2.109
    ports:
      - port: 3306
