ansible/roles/kubernetes-master/templates/vault-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  ports:
    - protocol: TCP
      port: 8300
      targetPort: 8300

---
apiVersion: v1
kind: Endpoints
metadata:
  name: vault
subsets:
  - addresses:
      - ip: 192.168.2.109
    ports:
      - port: 8300
